objects/FSL_Fail_Mode__c.object
<CustomObject>
    <description>Fail Modes Master Data is stored in this object</description>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueValue__c</fullName>
        <formula>Name+Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueValue</label>
        <type>Text</type>
    </fields>
    <label>Fail Mode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fail Mode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fail Modes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>